# learning-myself

./: .gitignore  README.md
deep_learning/: pyproject.toml
deep_learning/04/data/: house_tiny.csv
deep_learning/08/: data.py  linear_regression.py  simple_linear_regression.py
deep_learning/ch04/: class.py
deep_learning/ch05/: class.py
deep_learning/ch08/: test.py
deep_learning/ch09/: simple_softmax_regression.py  softmax_regression.py
deep_learning/ch10/: data.py  mlp.py  simple_mlp.py
python/: pyproject.toml
python/numpy/homework/: hw1.py  hw2.py  hw20.py  hw3.py  hw4.py  hw5.py  hw6.py  hw7.py  hw8.py  hw9.py
python/numpy/simple_classify_model/: make_moons.py  models.ipynb  models.py  test.py
